# ml-project-template

./: .dockerignore  .env.example  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env_build_check_gpu.py  env_health_check_gpu.py  environment.yml  old.docker-compose.yml  pyproject.toml  requirements.txt  test_setup.py
configs/: train.yaml
docker/: Dockerfile  base.Dockerfile  old.Dockerfile
docs/: pycharm-remote-docker-setup.md
