[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-project-template"
version = "0.1.0"
description = "A well-organized starter template for machine learning projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Project-specific dependencies (starts empty - add as needed)
# Examples: torch, tensorflow, transformers, fastapi, etc.
dependencies = []

[project.optional-dependencies]
# Core ML ecosystem - project-agnostic packages
base = [
    "numpy==1.26.4",
    "pandas==2.2.0",
    "scipy==1.12.0",
    "scikit-learn==1.4.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.1",
    "plotly==5.18.0",
    "jupyter==1.0.0",
    "jupyterlab==4.0.10",
    "ipykernel==6.29.0",
    "ipywidgets==8.1.1",
    "pillow==10.2.0",
    "tqdm==4.66.1",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "python-dateutil==2.8.2",
]

# Development tools
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
    "pip-tools==7.3.0",
]

[project.urls]
Repository = "https://github.com/aambardar/ml-project-template"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".venv", "__pycache__", "build", "dist"]
known_first_party = ["src"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "\.venv",
    "build",
    "dist",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert warnings (common in tests)
